[tool.poetry]
name = "subject6"
version = "0.1.0"
description = ""
authors = ["Wong Jiang Fung <jeff@leadbook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Faker = "^8.10.1"
Flask-Limiter = "^1.4"
CherryPy = "^18.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
